updated packages installations

--- a/deeplabcut_workshop_tutorial.ipynb
+++ b/deeplabcut_workshop_tutorial.ipynb
@@ -57,9 +57,14 @@
       },
       "outputs": [],
       "source": [
-        "#(this will take a few minutes to install all the dependences!)\n",
-        "!apt update && apt install cuda-11-8\n",
-        "!pip install \"deeplabcut[tf]\""
+        "# Clone the entire deeplabcut repo so we can use the demo data:\n",
+        "!git clone -l -s https://github.com/DeepLabCut/DeepLabCut.git cloned-DLC-repo\n",
+        "%cd cloned-DLC-repo\n",
+        "!ls\n",
+        "\n",
+        "# Install the latest DeepLabCut version (this will take a few minutes to install all the dependencies!)\n",
+        "%cd /content/cloned-DLC-repo/\n",
+        "%pip install \".\""
       ]
     },
     {
