--- a/deeplabcut_workshop_tutorial.ipynb
+++ b/deeplabcut_workshop_tutorial.ipynb
@@ -57,14 +57,9 @@
       },
       "outputs": [],
       "source": [
-        "# Clone the entire deeplabcut repo so we can use the demo data:\n",
-        "!git clone -l -s https://github.com/DeepLabCut/DeepLabCut.git cloned-DLC-repo\n",
-        "%cd cloned-DLC-repo\n",
-        "!ls\n",
-        "\n",
-        "# Install the latest DeepLabCut version (this will take a few minutes to install all the dependencies!)\n",
-        "%cd /content/cloned-DLC-repo/\n",
-        "%pip install \".\""
+        "#(this will take a few minutes to install all the dependences!)\n",
+        "!apt update && apt install cuda-11-8\n",
+        "!pip install \"deeplabcut[tf]\""
       ]
     },
     {
@@ -120,9 +115,7 @@
         "id": "Frnj1RVDyEqs"
       },
       "source": [
-        "YOU WILL NEED TO EDIT THE PROJECT PATH **in the config.yaml file** TO BE SET TO YOUR GOOGLE DRIVE LINK!\n",
-        "\n",
-        "Typically, this will be: /content/drive/My Drive/yourProjectFolderName\n"
+        "## Now we can start configuring the project!"
       ]
     },
     {
@@ -138,11 +131,11 @@
       "outputs": [],
       "source": [
         "# Setup your project variables:\n",
-        "ProjectFolderName = 'deeplabcut-network-workshop'\n",
+        "ProjectFolderName = 'workshop-network-2025'\n",
         "VideoType = 'mp4'\n",
         "\n",
         "#don't edit these:\n",
-        "videofile_path = ['/content/behavior&calcium-imaging-workshop/'+ProjectFolderName+'/videos/'] # Enter the list of videos or folder to analyze.\n",
+        "videofile_path = ['/content/behavior&calcium-imaging-workshop/data/behavior-videos'] # Enter the list of videos or folder to analyze.\n",
         "videofile_path"
       ]
     },
