--- a/deeplabcut_workshop_tutorial.ipynb
+++ b/deeplabcut_workshop_tutorial.ipynb
@@ -57,9 +57,9 @@
       },
       "outputs": [],
       "source": [
-        "#(this will take a few minutes to install all the dependences!)\n",
         "!apt update && apt install cuda-11-8\n",
-        "!pip install \"deeplabcut[tf]\""
+        "!pip install \"tensorflow<=2.12\" \"tensorpack>=0.11\" \"tf_slim>=1.1.0\"\n",
+        "!pip install --upgrade \"git+https://github.com/DeepLabCut/DeepLabCut.git\""
       ]
     },
     {
@@ -116,6 +116,15 @@
       },
       "source": [
         "## Now we can start configuring the project!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import deeplabcut"
       ]
     },
     {
