--- a/deeplabcut_workshop_tutorial.ipynb
+++ b/deeplabcut_workshop_tutorial.ipynb
@@ -8,28 +8,29 @@
       "source": [
         "# DeepLabCut Toolbox - Colab for standard (single animal) projects!\n",
         "\n",
-        "This notebook is a modified version of the demonstration notebook provided by <font color=\"green\">DeepLabCut</font>. For the original version refer to the [GitHub page of the DeepLabCut](https://github.com/DeepLabCut/DeepLabCut).\n",
+        "This notebook is a modified version of the demonstration notebook provided by <font color=\"green\">DeepLabCut</font>. For the original version, refer to the [GitHub page of DeepLabCut](https://github.com/DeepLabCut/DeepLabCut).\n",
         "\n",
         "![DeepLabCut GIF](https://images.squarespace-cdn.com/content/v1/57f6d51c9f74566f55ecf271/1619609897110-TKSTWKEM6HTGXID9D489/triMouseDLC.gif?format=2500w)\n",
         "\n",
-        "\n",
         "This notebook illustrates how to use the cloud to:\n",
-        "- create a training set\n",
-        "- train a network\n",
-        "- evaluate a network\n",
-        "- create simple quality check plots\n",
+        "- create a training set  \n",
+        "- train a network  \n",
+        "- evaluate a network  \n",
+        "- create simple quality check plots  \n",
         "- analyze novel videos!\n",
         "\n",
-        "### This notebook assumes you already have a project folder with labeled data (which we have saved previously on Google Drive)!\n",
+        "> **Note:** This notebook assumes you already have a DeepLabCut project folder with labeled data, which we have previously saved on Google Drive.\n",
         "\n",
         "This notebook demonstrates the necessary steps to use <font color=\"green\">DeepLabCut</font> for your own project.\n",
         "\n",
-        "This shows the most simple code to do so, but many of the functions have additional features, so please check out the [overview & the protocol paper](https://deeplabcut.github.io/DeepLabCut/docs/standardDeepLabCut_UserGuide.html) for detailed explanations of each step!\n",
+        "We use the most basic code here, but many functions have additional features. For detailed explanations of each step, please refer to the official documentation:\n",
         "\n",
-        "Nath\\*, Mathis\\* et al.: Using <font color=\"green\">DeepLabCut</font> for markerless pose estimation during behavior across species. Nature Protocols, 2019.\n",
+        "📚 **DeepLabCut Documentation**: [https://deeplabcut.github.io/DeepLabCut/docs/standardDeepLabCut_UserGuide.html](https://deeplabcut.github.io/DeepLabCut/docs/standardDeepLabCut_UserGuide.html)\n",
         "\n",
-        "\n",
-        "Paper: [Link](https://www.nature.com/articles/s41596-019-0176-0)\n",
+        "📝 Paper reference:  \n",
+        "Nath\\*, Mathis\\* et al. (2019): *Using DeepLabCut for markerless pose estimation during behavior across species.*  \n",
+        "**Nature Protocols**  \n",
+        "🔗 [Read the paper](https://www.nature.com/articles/s41596-019-0176-0)\n",
         "\n",
         "------------"
       ]
@@ -41,7 +42,20 @@
       },
       "source": [
         "## **Before you start**\n",
-        "First, go to ``Runtime`` -> ``change runtime type`` -> select ``Python3``, and then select ``GPU``."
+        "First, go to ``Runtime`` -> ``change runtime type`` -> select ``Python3``, and then select ``GPU``.\n",
+        "\n",
+        "## 🔧 Step 1: Install Dependencies\n",
+        "\n",
+        "To use DeepLabCut in Google Colab, we need to install a few system and Python packages.  \n",
+        "This step may take a few minutes.\n",
+        "\n",
+        "### 💡 What are we installing?\n",
+        "- **CUDA 11.8**: Required to enable GPU acceleration (Colab supports this version).\n",
+        "- **TensorFlow ≤ 2.12**: DeepLabCut is compatible up to this version.\n",
+        "- **Tensorpack & tf_slim**: Helpful tools used internally by DeepLabCut.\n",
+        "- **DeepLabCut (latest version)**: Directly installed from the official GitHub repository.\n",
+        "\n",
+        "Now, run the cell below:\n"
       ]
     },
     {
@@ -57,9 +71,19 @@
       },
       "outputs": [],
       "source": [
-        "!apt update && apt install cuda-11-8\n",
-        "!pip install \"tensorflow<=2.12\" \"tensorpack>=0.11\" \"tf_slim>=1.1.0\"\n",
-        "!pip install --upgrade \"git+https://github.com/DeepLabCut/DeepLabCut.git\""
+        "# Install the desired TensorFlow version, built for CUDA 11.8 and cudnn 8\n",
+        "!pip install \"tensorflow==2.12.1\" \"tensorpack>=0.11\" \"tf_slim>=1.1.0\"\n",
+        "\n",
+        "# Downgrade PyTorch to a version using CUDA 11.8 and cudnn 8\n",
+        "#   This should also install the required CUDA libraries, for both PyTorch and TensorFlow\n",
+        "!pip install torch==2.3.1 torchvision --index-url https://download.pytorch.org/whl/cu118\n",
+        "\n",
+        "# install DeepLabCut\n",
+        "!pip install \"git+https://github.com/DeepLabCut/DeepLabCut.git\"\n",
+        "\n",
+        "# As described in https://www.tensorflow.org/install/pip#step-by-step_instructions, \n",
+        "# create symbolic links to NVIDIA shared libraries:\n",
+        "!ln -svf /usr/local/lib/python3.11/dist-packages/nvidia/*/lib/*.so* /usr/local/lib/python3.11/dist-packages/tensorflow\n"
       ]
     },
     {
@@ -68,7 +92,31 @@
         "id": "25wSj6TlVclR"
       },
       "source": [
-        "**Be sure to click ``RESTART RUNTIME`` if it is displayed above before moving on!**"
+        "✅ After installation, you may be prompted to restart the runtime.  \n",
+        "If so, go to the menu: **Runtime → Restart runtime**, then re-run the notebook from here.\n",
+        "\n",
+        "Once everything is installed, we’re ready to set up the project and start working with videos!\n",
+        "\n",
+        "---\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import tensorflow as tf\n",
+        "import torch\n",
+        "\n",
+        "print(f\"Torch {torch.__version__}    \", torch.cuda.is_available())\n",
+        "print(f\"{torch.zeros(5, device='cuda:0')}\")\n",
+        "print(f\"TensorFlow {tf.__version__}    \", tf.config.list_physical_devices(\"GPU\"))\n",
+        "\n",
+        "# Expected output:\n",
+        "# Torch 2.3.1+cu118     True\n",
+        "# tensor([0., 0., 0., 0., 0.], device='cuda:0')\n",
+        "# TensorFlow 2.12.1     [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
       ]
     },
     {
@@ -77,8 +125,18 @@
         "id": "cQ-nlTkri4HZ"
       },
       "source": [
-        "## Link your Google Drive (with your labeled data, or the demo data):\n",
-        "\n"
+        "## 🚀 Step 2: Access Your Data from Google Drive\n",
+        "\n",
+        "We will use Google Drive to store and access your project files (videos, labels, config, etc.) in Colab.\n",
+        "\n",
+        "### Why mount Google Drive?  \n",
+        "Colab sessions are temporary and files are erased after the runtime disconnects. Mounting Google Drive lets you easily access your persistent files stored in the cloud.\n",
+        "\n",
+        "### What does the code do?  \n",
+        "- **Mounts your Google Drive** so Colab can read files stored there.  \n",
+        "- **Copies a project folder** from your Drive to the Colab local environment for faster access during processing.\n",
+        "\n",
+        "> 🔑 **Important:** Update the `source_folder` path to point to your actual folder in Google Drive! Most likely it will not be needed if you did everything according to instructions but it is worth to double-check!"
       ]
     },
     {
@@ -115,16 +173,22 @@
         "id": "Frnj1RVDyEqs"
       },
       "source": [
-        "## Now we can start configuring the project!"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import deeplabcut"
+        "## Step 3: Now we can start configuring the project!\n",
+        "\n",
+        "Now we define some key variables that tell DeepLabCut where your project files are and what kind of videos you want to analyze.\n",
+        "\n",
+        "### What are these variables?\n",
+        "\n",
+        "- `ProjectFolderName`:  \n",
+        "  The name of your DeepLabCut project folder.  \n",
+        "  This should match the folder where your labeled data and config file are stored.\n",
+        "\n",
+        "- `VideoType`:  \n",
+        "  The video file format you want to analyze (e.g., `'mp4'`, `'avi'`, `'mov'`).\n",
+        "\n",
+        "- `videofile_path` (do not edit):  \n",
+        "  This is the full path to the folder or list of videos that you want DeepLabCut to process.  \n",
+        "  Here, it points to the local folder in Colab where we copied your videos from Google Drive.\n"
       ]
     },
     {
@@ -139,12 +203,14 @@
       },
       "outputs": [],
       "source": [
-        "# Setup your project variables:\n",
-        "ProjectFolderName = 'workshop-network-2025'\n",
-        "VideoType = 'mp4'\n",
+        "# Customize these:\n",
+        "ProjectFolderName = 'workshop-network-2025'  # Your project folder name\n",
+        "VideoType = 'mp4'                            # Format of videos you want to analyze\n",
         "\n",
-        "#don't edit these:\n",
-        "videofile_path = ['/content/behavior&calcium-imaging-workshop/data/behavior-videos'] # Enter the list of videos or folder to analyze.\n",
+        "# Do not edit this:\n",
+        "videofile_path = ['/content/behavior&calcium-imaging-workshop/data/behavior-videos']  # Path to your video files\n",
+        "\n",
+        "# Show the path to confirm\n",
         "videofile_path"
       ]
     },
@@ -160,23 +226,11 @@
       },
       "outputs": [],
       "source": [
-        "import deeplabcut"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "o4orkg9QTHKK",
-        "outputId": "f77a5161-4f26-4ba8-ce6e-4bf52194fc47"
-      },
-      "outputs": [],
-      "source": [
-        "deeplabcut.__version__"
+        "# Import DeepLabCut package\n",
+        "import deeplabcut\n",
+        "\n",
+        "# Print the currently installed DeepLabCut version\n",
+        "print(\"DeepLabCut version:\", deeplabcut.__version__)\n"
       ]
     },
     {
@@ -204,7 +258,7 @@
         "id": "xNi9s1dboEJN"
       },
       "source": [
-        "## Create a training dataset:\n",
+        "## Step 4: Create a training dataset:\n",
         "### You must do this step inside of Colab:\n",
         "After running this script the training dataset is created and saved in the project directory under the subdirectory **'training-datasets'**\n",
         "\n",
@@ -253,19 +307,22 @@
       "source": [
         "import yaml\n",
         "\n",
+        "# Path to the DeepLabCut pose configuration YAML file for the model\n",
         "pose_cfg_path = '/content/behavior&calcium-imaging-workshop/deeplabcut-network-workshop/dlc-models/iteration-5/ss_vs_sscwJan30-trainset95shuffle1/train/pose_cfg.yaml'\n",
+        "\n",
+        "# Path to the checkpoint file containing pretrained model weights\n",
         "checkpoint = '/content/behavior&calcium-imaging-workshop/deeplabcut-network-workshop/old_dlc-models/iteration-5/ss_vs_sscwJan30-trainset95shuffle2/train/snapshot-100000'\n",
         "\n",
-        "# Load the pose_cfg.yaml file\n",
+        "# Load the pose_cfg.yaml file content into a Python dictionary\n",
         "with open(pose_cfg_path, 'r') as file:\n",
         "    pose_cfg_content = yaml.safe_load(file)\n",
         "\n",
-        "# Replace the value of 'init_weights' with the checkpoint path\n",
+        "# Update the 'init_weights' field in the config to point to the checkpoint file\n",
         "pose_cfg_content['init_weights'] = checkpoint\n",
         "\n",
-        "# Write the modified content back to pose_cfg.yaml\n",
+        "# Save the updated configuration back to the YAML file\n",
         "with open(pose_cfg_path, 'w') as file:\n",
-        "    yaml.dump(pose_cfg_content, file)\n"
+        "    yaml.dump(pose_cfg_content, file)"
       ]
     },
     {
@@ -274,8 +331,24 @@
         "id": "c4FczXGDoEJU"
       },
       "source": [
-        "## Start training:\n",
-        "This function trains the network for a specific shuffle of the training dataset."
+        "## Step 5: Start training\n",
+        "\n",
+        "This function trains the network for a specific **shuffle** of the training dataset.\n",
+        "\n",
+        "### What is a shuffle?\n",
+        "\n",
+        "In DeepLabCut, a **shuffle** refers to one random split of your labeled data into training and testing subsets.  \n",
+        "Because training results can vary depending on which frames are used for training vs. testing, DeepLabCut allows you to create multiple shuffled splits to:\n",
+        "\n",
+        "- Improve robustness by training multiple models on different data splits  \n",
+        "- Evaluate performance consistency across these splits  \n",
+        "- Select the best-performing model after training\n",
+        "\n",
+        "### Important:\n",
+        "\n",
+        "The **shuffle** number you use here should be the one you created in the previous step, which is most likely `1` if you followed the default settings.\n",
+        "\n",
+        "By specifying the shuffle number, you tell DeepLabCut which data split to use for this particular training run."
       ]
     },
     {
@@ -294,7 +367,8 @@
         "#if that happens, you can reload from a saved point. Typically, you want to train to 200,000 + iterations.\n",
         "#more info and there are more things you can set: https://github.com/DeepLabCut/DeepLabCut/wiki/DOCSTRINGS#train_network\n",
         "\n",
-        "deeplabcut.train_network(path_config_file, shuffle=1, displayiters=10,saveiters=50, maxiters=100)\n",
+        "shuffle = 1\n",
+        "deeplabcut.train_network(path_config_file, shuffle=shuffle, displayiters=10,saveiters=50, maxiters=100)\n",
         "\n",
         "#this will run until you stop it (CTRL+C), or hit \"STOP\" icon, or when it hits the end (default, 1.03M iterations).\n",
         "#Whichever you chose, you will see what looks like an error message, but it's not an error - don't worry...."
@@ -315,11 +389,11 @@
         "id": "xZygsb2DoEJc"
       },
       "source": [
-        "## Start evaluating:\n",
+        "## Step 6: Start evaluating:\n",
         "\n",
         "This function assesses a trained model's performance for a specific shuffle or shuffles at a particular state or across all states on the dataset (images). The results are stored as a .csv file in a subdirectory under **evaluation-results**.\n",
         "\n",
-        "*Look through the results in the **evaluation-results** directory.* Additionally, *review the very end of the output to identify train and test errors.*\n",
+        "Look through the results in the **evaluation-results** directory. Additionally, review the very end of the output to identify train and test errors.\n",
         "\n",
         "*How do you judge the model's performance?*\n"
       ]
@@ -341,7 +415,7 @@
         "deeplabcut.evaluate_network(path_config_file,plotting=True)\n",
         "\n",
         "# Here you want to see a low pixel error! Of course, it can only be as good as the labeler,\n",
-        "#so be sure your labels are good! (And you have trained enough ;)"
+        "# so be sure your labels are good! (And you have trained enough ;)"
       ]
     },
     {
