--- a/deeplabcut_workshop_tutorial.ipynb
+++ b/deeplabcut_workshop_tutorial.ipynb
@@ -308,10 +308,10 @@
         "import yaml\n",
         "\n",
         "# Path to the DeepLabCut pose configuration YAML file for the model\n",
-        "pose_cfg_path = '/content/behavior&calcium-imaging-workshop/deeplabcut-network-workshop/dlc-models/iteration-5/ss_vs_sscwJan30-trainset95shuffle1/train/pose_cfg.yaml'\n",
+        "pose_cfg_path = f'/content/behavior&calcium-imaging-workshop/{ProjectFolderName}/dlc-models/iteration-5/ss_vs_sscwJan30-trainset95shuffle1/train/pose_cfg.yaml'\n",
         "\n",
         "# Path to the checkpoint file containing pretrained model weights\n",
-        "checkpoint = '/content/behavior&calcium-imaging-workshop/deeplabcut-network-workshop/old_dlc-models/iteration-5/ss_vs_sscwJan30-trainset95shuffle2/train/snapshot-100000'\n",
+        "checkpoint = f'/content/behavior&calcium-imaging-workshop/{ProjectFolderName}/old_dlc-models/iteration-5/ss_vs_sscwJan30-trainset95shuffle2/train/snapshot-100000'\n",
         "\n",
         "# Load the pose_cfg.yaml file content into a Python dictionary\n",
         "with open(pose_cfg_path, 'r') as file:\n",
@@ -455,7 +455,6 @@
       },
       "outputs": [],
       "source": [
-        "videofile_path = ['/content/behavior&calcium-imaging-workshop/data/behavior-data/day0.mp4', '/content/behavior&calcium-imaging-workshop/data/behavior-data/day1.mp4']\n",
         "deeplabcut.analyze_videos(path_config_file,videofile_path, videotype=VideoType)"
       ]
     },
@@ -612,7 +611,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Define the path to the labeled video\n",
-        "labelled_video_path = '/content/behavior&calcium-imaging-workshop/data/behavior-data/day0DLC_resnet50_ss_vs_sscwJan30shuffle1_100100_labeled.mp4'\n",
+        "labelled_video_path = '/content/behavior&calcium-imaging-workshop/data/behavior-videos/day0DLC_resnet50_ss_vs_sscwJan30shuffle1_100100_labeled.mp4'\n",
         "\n",
         "# Read the video\n",
         "video_capture = cv2.VideoCapture(labelled_video_path)\n",
@@ -636,15 +635,6 @@
         "# Display the HTML plot\n",
         "display(HTML(html_plot))\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "72ug1j4RK1_P"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
