--- a/deeplabcut_workshop_tutorial.ipynb
+++ b/deeplabcut_workshop_tutorial.ipynb
@@ -17,7 +17,7 @@
         "- train a network  \n",
         "- evaluate a network  \n",
         "- create simple quality check plots  \n",
-        "- analyze novel videos!\n",
+        "- analyze novel videos\n",
         "\n",
         "> **Note:** This notebook assumes you already have a DeepLabCut project folder with labeled data, which we have previously saved on Google Drive.\n",
         "\n",
@@ -41,19 +41,16 @@
         "id": "txoddlM8hLKm"
       },
       "source": [
-        "## **Before you start**\n",
-        "First, go to ``Runtime`` -> ``change runtime type`` -> select ``Python3``, and then select ``GPU``.\n",
+        "## 🔧 Step 1: Install Required Packages and Dependencies\n",
         "\n",
-        "## 🔧 Step 1: Install Dependencies\n",
+        "We will install the specific versions of TensorFlow, PyTorch, and DeepLabCut optimized for CUDA 11.8 and cuDNN 8, which are compatible with the Colab environment.\n",
         "\n",
-        "To use DeepLabCut in Google Colab, we need to install a few system and Python packages.  \n",
-        "This step may take a few minutes.\n",
+        "### What the commands do:\n",
         "\n",
-        "### 💡 What are we installing?\n",
-        "- **CUDA 11.8**: Required to enable GPU acceleration (Colab supports this version).\n",
-        "- **TensorFlow ≤ 2.12**: DeepLabCut is compatible up to this version.\n",
-        "- **Tensorpack & tf_slim**: Helpful tools used internally by DeepLabCut.\n",
-        "- **DeepLabCut (latest version)**: Directly installed from the official GitHub repository.\n",
+        "- **Install TensorFlow 2.12.1**, built for CUDA 11.8 and cuDNN 8, along with required packages `tensorpack` and `tf_slim`.  \n",
+        "- **Downgrade PyTorch to version 2.3.1**, which supports CUDA 11.8 and installs necessary CUDA libraries for both PyTorch and TensorFlow.  \n",
+        "- **Install DeepLabCut directly from the latest GitHub source** to ensure you get the newest features and fixes.  \n",
+        "- **Create symbolic links for NVIDIA shared libraries** as recommended by TensorFlow's official installation instructions to fix potential runtime library issues.\n",
         "\n",
         "Now, run the cell below:\n"
       ]
@@ -78,12 +75,51 @@
         "#   This should also install the required CUDA libraries, for both PyTorch and TensorFlow\n",
         "!pip install torch==2.3.1 torchvision --index-url https://download.pytorch.org/whl/cu118\n",
         "\n",
-        "# install DeepLabCut\n",
+        "# Install DeepLabCut\n",
         "!pip install \"git+https://github.com/DeepLabCut/DeepLabCut.git\"\n",
         "\n",
         "# As described in https://www.tensorflow.org/install/pip#step-by-step_instructions, \n",
         "# create symbolic links to NVIDIA shared libraries:\n",
         "!ln -svf /usr/local/lib/python3.11/dist-packages/nvidia/*/lib/*.so* /usr/local/lib/python3.11/dist-packages/tensorflow\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "After installing the packages, it's important to confirm that both TensorFlow and PyTorch can access the GPU.  \n",
+        "This check will print the installed versions and verify that the GPU is available and working correctly.\n",
+        "\n",
+        "### What this code does:\n",
+        "\n",
+        "- Imports TensorFlow and PyTorch libraries.\n",
+        "- Prints the PyTorch version and checks if CUDA (GPU support) is available.\n",
+        "- Creates a small tensor on the GPU using PyTorch to confirm it can allocate GPU memory.\n",
+        "- Prints the TensorFlow version and lists available physical GPU devices.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import tensorflow as tf\n",
+        "import torch\n",
+        "\n",
+        "# Print PyTorch version and GPU availability status\n",
+        "print(f\"Torch {torch.__version__}    \", torch.cuda.is_available())\n",
+        "\n",
+        "# Create a tensor on the GPU to test PyTorch GPU functionality\n",
+        "print(f\"{torch.zeros(5, device='cuda:0')}\")\n",
+        "\n",
+        "# Print TensorFlow version and list detected GPU devices\n",
+        "print(f\"TensorFlow {tf.__version__}    \", tf.config.list_physical_devices(\"GPU\"))\n",
+        "\n",
+        "# Expected output:\n",
+        "# Torch 2.3.1+cu118     True\n",
+        "# tensor([0., 0., 0., 0., 0.], device='cuda:0')\n",
+        "# TensorFlow 2.12.1     [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
       ]
     },
     {
@@ -98,25 +134,6 @@
         "Once everything is installed, we’re ready to set up the project and start working with videos!\n",
         "\n",
         "---\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import tensorflow as tf\n",
-        "import torch\n",
-        "\n",
-        "print(f\"Torch {torch.__version__}    \", torch.cuda.is_available())\n",
-        "print(f\"{torch.zeros(5, device='cuda:0')}\")\n",
-        "print(f\"TensorFlow {tf.__version__}    \", tf.config.list_physical_devices(\"GPU\"))\n",
-        "\n",
-        "# Expected output:\n",
-        "# Torch 2.3.1+cu118     True\n",
-        "# tensor([0., 0., 0., 0., 0.], device='cuda:0')\n",
-        "# TensorFlow 2.12.1     [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
       ]
     },
     {
@@ -173,6 +190,8 @@
         "id": "Frnj1RVDyEqs"
       },
       "source": [
+        "---\n",
+        "\n",
         "## Step 3: Now we can start configuring the project!\n",
         "\n",
         "Now we define some key variables that tell DeepLabCut where your project files are and what kind of videos you want to analyze.\n",
@@ -230,7 +249,7 @@
         "import deeplabcut\n",
         "\n",
         "# Print the currently installed DeepLabCut version\n",
-        "print(\"DeepLabCut version:\", deeplabcut.__version__)\n"
+        "print(\"DeepLabCut version:\", deeplabcut.__version__)"
       ]
     },
     {
@@ -258,6 +277,8 @@
         "id": "xNi9s1dboEJN"
       },
       "source": [
+        "---\n",
+        "\n",
         "## Step 4: Create a training dataset:\n",
         "### You must do this step inside of Colab:\n",
         "After running this script the training dataset is created and saved in the project directory under the subdirectory **'training-datasets'**\n",
@@ -294,7 +315,22 @@
       "source": [
         "In the next cell, we'll be updating the pose configuration file, which contains all the settings necessary for training. This step ensures that we initialize the training process using weights obtained from previous training sessions.\n",
         "\n",
-        "This step is crucial because training the network to achieve optimal performance can be time-consuming, often taking several hours. Unfortunately, this duration far exceeds the time constraints of the workshop."
+        "This step is crucial because training the network to achieve optimal performance can be time-consuming, often taking several hours. Unfortunately, this duration far exceeds the time constraints of the workshop.\n",
+        "\n",
+        "### What is a shuffle?\n",
+        "\n",
+        "In DeepLabCut, a **shuffle** refers to one random split of your labeled data into training and testing subsets.  \n",
+        "Because training results can vary depending on which frames are used for training vs. testing, DeepLabCut allows you to create multiple shuffled splits to:\n",
+        "\n",
+        "- Improve robustness by training multiple models on different data splits  \n",
+        "- Evaluate performance consistency across these splits  \n",
+        "- Select the best-performing model after training\n",
+        "\n",
+        "### Important:\n",
+        "\n",
+        "The **shuffle** number you use here should be the one you created in the previous step, which is most likely `1` if you followed the default settings.\n",
+        "\n",
+        "By specifying the shuffle number, you tell DeepLabCut which data split to use for this particular training run."
       ]
     },
     {
@@ -307,8 +343,11 @@
       "source": [
         "import yaml\n",
         "\n",
+        "# Define the shuffle number\n",
+        "shuffle = 1\n",
+        "\n",
         "# Path to the DeepLabCut pose configuration YAML file for the model\n",
-        "pose_cfg_path = f'/content/behavior&calcium-imaging-workshop/{ProjectFolderName}/dlc-models/iteration-5/ss_vs_sscwJan30-trainset95shuffle1/train/pose_cfg.yaml'\n",
+        "pose_cfg_path = f'/content/behavior&calcium-imaging-workshop/{ProjectFolderName}/dlc-models/iteration-5/ss_vs_sscwJan30-trainset95shuffle{shuffle}/train/pose_cfg.yaml'\n",
         "\n",
         "# Path to the checkpoint file containing pretrained model weights\n",
         "checkpoint = f'/content/behavior&calcium-imaging-workshop/{ProjectFolderName}/old_dlc-models/iteration-5/ss_vs_sscwJan30-trainset95shuffle2/train/snapshot-100000'\n",
@@ -331,24 +370,11 @@
         "id": "c4FczXGDoEJU"
       },
       "source": [
+        "---\n",
+        "\n",
         "## Step 5: Start training\n",
         "\n",
-        "This function trains the network for a specific **shuffle** of the training dataset.\n",
-        "\n",
-        "### What is a shuffle?\n",
-        "\n",
-        "In DeepLabCut, a **shuffle** refers to one random split of your labeled data into training and testing subsets.  \n",
-        "Because training results can vary depending on which frames are used for training vs. testing, DeepLabCut allows you to create multiple shuffled splits to:\n",
-        "\n",
-        "- Improve robustness by training multiple models on different data splits  \n",
-        "- Evaluate performance consistency across these splits  \n",
-        "- Select the best-performing model after training\n",
-        "\n",
-        "### Important:\n",
-        "\n",
-        "The **shuffle** number you use here should be the one you created in the previous step, which is most likely `1` if you followed the default settings.\n",
-        "\n",
-        "By specifying the shuffle number, you tell DeepLabCut which data split to use for this particular training run."
+        "This function trains the network for a specific **shuffle** of the training dataset."
       ]
     },
     {
@@ -367,7 +393,6 @@
         "#if that happens, you can reload from a saved point. Typically, you want to train to 200,000 + iterations.\n",
         "#more info and there are more things you can set: https://github.com/DeepLabCut/DeepLabCut/wiki/DOCSTRINGS#train_network\n",
         "\n",
-        "shuffle = 1\n",
         "deeplabcut.train_network(path_config_file, shuffle=shuffle, displayiters=10,saveiters=50, maxiters=100)\n",
         "\n",
         "#this will run until you stop it (CTRL+C), or hit \"STOP\" icon, or when it hits the end (default, 1.03M iterations).\n",
@@ -389,13 +414,15 @@
         "id": "xZygsb2DoEJc"
       },
       "source": [
+        "---\n",
+        "\n",
         "## Step 6: Start evaluating:\n",
         "\n",
         "This function assesses a trained model's performance for a specific shuffle or shuffles at a particular state or across all states on the dataset (images). The results are stored as a .csv file in a subdirectory under **evaluation-results**.\n",
         "\n",
         "Look through the results in the **evaluation-results** directory. Additionally, review the very end of the output to identify train and test errors.\n",
         "\n",
-        "*How do you judge the model's performance?*\n"
+        "*How do you judge the model's performance?*"
       ]
     },
     {
@@ -412,7 +439,7 @@
       "outputs": [],
       "source": [
         "%matplotlib notebook\n",
-        "deeplabcut.evaluate_network(path_config_file,plotting=True)\n",
+        "deeplabcut.evaluate_network(path_config_file,plotting=True, Shuffles=(shuffle,))\n",
         "\n",
         "# Here you want to see a low pixel error! Of course, it can only be as good as the labeler,\n",
         "# so be sure your labels are good! (And you have trained enough ;)"
@@ -436,7 +463,9 @@
         "id": "OVFLSKKfoEJk"
       },
       "source": [
-        "*italicised text*## Start Analyzing videos:\n",
+        "---\n",
+        "\n",
+        "## Step 7: Start Analyzing videos (Last one):\n",
         "This function analyzes the new video. The user can choose the best model from the evaluation results and specify the correct snapshot index for the variable **snapshotindex** in the **config.yaml** file. Otherwise, by default the most recent snapshot is used to analyse the video.\n",
         "\n",
         "The results are stored in hd5 file in the same directory where the video resides."
@@ -455,7 +484,7 @@
       },
       "outputs": [],
       "source": [
-        "deeplabcut.analyze_videos(path_config_file,videofile_path, videotype=VideoType)"
+        "deeplabcut.analyze_videos(path_config_file,videofile_path, videotype=VideoType, shuffle=shuffle)"
       ]
     },
     {
@@ -497,7 +526,7 @@
       },
       "outputs": [],
       "source": [
-        "deeplabcut.plot_trajectories(path_config_file,videofile_path, videotype=VideoType)"
+        "deeplabcut.plot_trajectories(path_config_file,videofile_path, videotype=VideoType, shuffle=shuffle)"
       ]
     },
     {
@@ -506,7 +535,7 @@
         "id": "nr6a6pZIqWvE"
       },
       "source": [
-        "You can view these graphs in Google Drive, but they are also available for visualization within the notebook. Execute the following cell and attempt to interpret the plots.\n",
+        "You can view these graphs in content folder, but they are also available for visualization within the notebook. Execute the following cell and attempt to interpret the plots.\n",
         "\n",
         "*Is the performance of the model on our data satisfactory?*\n",
         "\n",
@@ -533,7 +562,7 @@
         "\n",
         "\n",
         "# Define paths to the images\n",
-        "root = '/content/behavior&calcium-imaging-workshop/data/behavior-data/plot-poses/day0'\n",
+        "root = '/content/behavior&calcium-imaging-workshop/data/behavior-videos/plot-poses/day0'\n",
         "plot_likelihood_path = f'{root}/plot-likelihood.png'\n",
         "hist_path = f'{root}/hist.png'\n",
         "plot_path = f'{root}/plot.png'\n",
@@ -591,7 +620,7 @@
       },
       "outputs": [],
       "source": [
-        "deeplabcut.create_labeled_video(path_config_file,videofile_path, videotype=VideoType)"
+        "deeplabcut.create_labeled_video(path_config_file,videofile_path, videotype=VideoType, shhuffle=shuffle)"
       ]
     },
     {
@@ -611,7 +640,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Define the path to the labeled video\n",
-        "labelled_video_path = '/content/behavior&calcium-imaging-workshop/data/behavior-videos/day0DLC_resnet50_ss_vs_sscwJan30shuffle1_100100_labeled.mp4'\n",
+        "labelled_video_path = '/content/behavior&calcium-imaging-workshop/data/behavior-videos/day0croppedshortdownsampledDLC_resnet50_ss_vs_sscwJan30shuffle5_100100_p60_labeled.mp4'\n",
         "\n",
         "# Read the video\n",
         "video_capture = cv2.VideoCapture(labelled_video_path)\n",
