--- a/deeplabcut_workshop_tutorial.ipynb
+++ b/deeplabcut_workshop_tutorial.ipynb
@@ -620,7 +620,7 @@
       },
       "outputs": [],
       "source": [
-        "deeplabcut.create_labeled_video(path_config_file,videofile_path, videotype=VideoType, shhuffle=shuffle)"
+        "deeplabcut.create_labeled_video(path_config_file,videofile_path, videotype=VideoType, shuffle=shuffle)"
       ]
     },
     {
