--- a/deeplabcut_workshop_tutorial.ipynb
+++ b/deeplabcut_workshop_tutorial.ipynb
@@ -175,8 +175,8 @@
         "drive.mount('/content/drive')\n",
         "\n",
         "# Define source and destination paths\n",
-        "source_folder = '/content/drive/MyDrive/behavior&calcium-imaging-workshop'  # Update with your shared folder path\n",
-        "destination_folder = '/content/behavior&calcium-imaging-workshop'  # Content folder in Colab\n",
+        "source_folder = '/content/drive/MyDrive/behavior-and-calcium-imaging-workshop'  # Update with your shared folder path\n",
+        "destination_folder = '/content/behavior-and-calcium-imaging-workshop'  # Content folder in Colab\n",
         "\n",
         "# Copy files from source to destination folder\n",
         "shutil.copytree(source_folder, destination_folder)\n",
@@ -227,7 +227,7 @@
         "VideoType = 'mp4'                            # Format of videos you want to analyze\n",
         "\n",
         "# Do not edit this:\n",
-        "videofile_path = ['/content/behavior&calcium-imaging-workshop/data/behavior-videos']  # Path to your video files\n",
+        "videofile_path = ['/content/behavior-and-calcium-imaging-workshop/data/behavior-videos']  # Path to your video files\n",
         "\n",
         "# Show the path to confirm\n",
         "videofile_path"
@@ -267,7 +267,7 @@
       "source": [
         "#This creates a path variable that links to your google drive copy\n",
         "#No need to edit this, as you set it up before:\n",
-        "path_config_file = '/content/behavior&calcium-imaging-workshop/'+ProjectFolderName+'/config.yaml'\n",
+        "path_config_file = '/content/behavior-and-calcium-imaging-workshop/'+ProjectFolderName+'/config.yaml'\n",
         "path_config_file"
       ]
     },
@@ -347,10 +347,10 @@
         "shuffle = 1\n",
         "\n",
         "# Path to the DeepLabCut pose configuration YAML file for the model\n",
-        "pose_cfg_path = f'/content/behavior&calcium-imaging-workshop/{ProjectFolderName}/dlc-models/iteration-5/ss_vs_sscwJan30-trainset95shuffle{shuffle}/train/pose_cfg.yaml'\n",
+        "pose_cfg_path = f'/content/behavior-and-calcium-imaging-workshop/{ProjectFolderName}/dlc-models/iteration-5/ss_vs_sscwJan30-trainset95shuffle{shuffle}/train/pose_cfg.yaml'\n",
         "\n",
         "# Path to the checkpoint file containing pretrained model weights\n",
-        "checkpoint = f'/content/behavior&calcium-imaging-workshop/{ProjectFolderName}/old_dlc-models/iteration-5/ss_vs_sscwJan30-trainset95shuffle2/train/snapshot-100000'\n",
+        "checkpoint = f'/content/behavior-and-calcium-imaging-workshop/{ProjectFolderName}/old_dlc-models/iteration-5/ss_vs_sscwJan30-trainset95shuffle2/train/snapshot-100000'\n",
         "\n",
         "# Load the pose_cfg.yaml file content into a Python dictionary\n",
         "with open(pose_cfg_path, 'r') as file:\n",
@@ -562,7 +562,7 @@
         "\n",
         "\n",
         "# Define paths to the images\n",
-        "root = '/content/behavior&calcium-imaging-workshop/data/behavior-videos/plot-poses/day0croppedshortdownsampled'\n",
+        "root = '/content/behavior-and-calcium-imaging-workshop/data/behavior-videos/plot-poses/day0croppedshortdownsampled'\n",
         "plot_likelihood_path = f'{root}/plot-likelihood.png'\n",
         "hist_path = f'{root}/hist.png'\n",
         "plot_path = f'{root}/plot.png'\n",
@@ -640,7 +640,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Define the path to the labeled video\n",
-        "labelled_video_path = '/content/behavior&calcium-imaging-workshop/data/behavior-videos/day0croppedshortdownsampledDLC_resnet50_ss_vs_sscwJan30shuffle5_100100_p60_labeled.mp4'\n",
+        "labelled_video_path = '/content/behavior-and-calcium-imaging-workshop/data/behavior-videos/day0croppedshortdownsampledDLC_resnet50_ss_vs_sscwJan30shuffle5_100100_p60_labeled.mp4'\n",
         "\n",
         "# Read the video\n",
         "video_capture = cv2.VideoCapture(labelled_video_path)\n",
