--- a/deeplabcut_workshop_tutorial.ipynb
+++ b/deeplabcut_workshop_tutorial.ipynb
@@ -640,7 +640,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Define the path to the labeled video\n",
-        "labelled_video_path = '/content/behavior-and-calcium-imaging-workshop/data/behavior-videos/day0croppedshortdownsampledDLC_resnet50_ss_vs_sscwJan30shuffle5_100100_p60_labeled.mp4'\n",
+        "labelled_video_path = f'/content/behavior-and-calcium-imaging-workshop/data/behavior-videos/day0croppedshortdownsampledDLC_resnet50_ss_vs_sscwJan30shuffle{shuffle}_100100_p60_labeled.mp4'\n",
         "\n",
         "# Read the video\n",
         "video_capture = cv2.VideoCapture(labelled_video_path)\n",
