--- a/caiman_workshop_tutorial.ipynb
+++ b/caiman_workshop_tutorial.ipynb
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "# Clone CaImAn from Github\n",
-    "# !git clone https://github.com/flatironinstitute/CaImAn.git\n",
+    "!git clone https://github.com/flatironinstitute/CaImAn.git\n",
     "!pip install -r /content/behavior-and-calcium-imaging-workshop/data/calcium-imaging-data/requirements_caiman.txt\n",
     "\n",
     "# Install relevant packages\n",
