--- a/caiman_workshop_tutorial.ipynb
+++ b/caiman_workshop_tutorial.ipynb
@@ -716,8 +716,8 @@
    "outputs": [],
    "source": [
     "# calculate stride and overlap from parameters\n",
-    "cnmf_patch_width = cnmf_model.params.patch['rf']*2 + 1\n",
-    "cnmf_patch_overlap = cnmf_model.params.patch['stride'] + 1\n",
+    "cnmf_patch_width = cnmfe_model.params.patch['rf']*2 + 1\n",
+    "cnmf_patch_overlap = cnmfe_model.params.patch['stride'] + 1\n",
     "cnmf_patch_stride = cnmf_patch_width - cnmf_patch_overlap\n",
     "print(f'Patch width: {cnmf_patch_width} , Stride: {cnmf_patch_stride}, Overlap: {cnmf_patch_overlap}');\n",
     "\n",
