--- a/place_cell_detection_solved.ipynb
+++ b/place_cell_detection_solved.ipynb
@@ -88,6 +88,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "e1374c95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import drive\n",
+    "import shutil\n",
+    "\n",
+    "# Mount Google Drive\n",
+    "drive.mount('/content/drive')\n",
+    "\n",
+    "# Define source and destination paths\n",
+    "source_folder = '/content/drive/MyDrive/behavior-and-calcium-imaging-workshop/data/project'  # Update with your shared folder path\n",
+    "destination_folder = '/content/behavior-and-calcium-imaging-workshop/data/project'  # Content folder in Colab\n",
+    "\n",
+    "# Copy files from source to destination folder\n",
+    "shutil.copytree(source_folder, destination_folder)\n",
+    "\n",
+    "print(\"Files copied successfully!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 187,
    "id": "58668037",
    "metadata": {},
@@ -108,13 +131,13 @@
     "# - Shape: (n_neurons, n_frames)\n",
     "# - Each row = ΔF/F signal of a neuron\n",
     "# - Each column = time point (aligned to video frames)\n",
-    "calcium_data = np.load(r'drive_data\\data\\project\\HBTD1_5593_F_NH_calcium_data.npy')\n",
+    "calcium_data = np.load('/content/behavior-and-calcium-imaging-workshop/data/project/HBTD1_5593_F_NH_calcium_data.npy')\n",
     "\n",
     "# Movement (position) data:\n",
     "# - Shape: (n_frames, 2)\n",
     "# - Each row = time point (frame)\n",
     "# - Columns: [x_position, y_position] in arena coordinates (pixels or cm)\n",
-    "movement_data = np.load(r'drive_data\\data\\project\\HBTD1_5593_F_NH_position.npy')\n",
+    "movement_data = np.load('/content/behavior-and-calcium-imaging-workshop/data/project/HBTD1_5593_F_NH_position.npy')\n",
     "\n",
     "# Print the shapes to confirm dimensions match\n",
     "# We expect both to have the same number of frames (rows)\n",
